# fssort

./: CMakeLists.txt  INSTALL  README.md  USAGE
src/: caps.cpp  caps.hpp  fssort.cpp  memberptr.hpp  opts.cpp  opts.hpp  sort.cpp  sort.hpp  verbose.cpp  verbose.hpp
